<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.chatter.HomeFragment"
        android:label="@string/text_chatter"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_contactListFragment"
            app:destination="@id/contactListFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.chatter.AboutFragment"
        android:label="@string/text_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/contactListFragment"
        android:name="com.example.chatter.ContactListFragment"
        android:label="@string/text_contact_list"
        tools:layout="@layout/fragment_contact_list" />
</navigation>